deploy/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: raidschedule
  namespace: raidschedule
  annotations:
    kubernetes.io/ingress.class: gce
    kubernetes.io/ingress.global-static-ip-name: raidschedule-ip
    networking.gke.io/managed-certificates: raidschedule-cert
    networking.gke.io/v1beta1.FrontendConfig: raidschedule-frontend-config
spec:
  defaultBackend:
    service:
      name: raidschedule
      port:
        number: 80
